--- a/build.gradle
+++ b/build.gradle
@@ -898,7 +898,7 @@ distributions
                 // Must also add the new directory to classpath under
                 // startScripts below. For each module that adds to dist,
                 // add here for now until we can make it grab all of em.
-                ['dist', 'wres-vis/dist', 'wres-io/dist']
+                ['dist', 'wres-vis/dist', 'wres-io/dist', 'LICENSE']
             }
         }
     }
