--- a/build.gradle
+++ b/build.gradle
@@ -562,6 +562,8 @@ project(':wres-worker')
         compile 'org.slf4j:slf4j-api:1.8.0-beta4'
         compile 'com.rabbitmq:amqp-client:5.7.2'
         runtime 'ch.qos.logback:logback-classic:1.3.0-alpha4'
+
+        testCompile 'junit:junit:4.13-beta-3'
     }
 
     apply plugin: 'application'
