--- a/build.gradle
+++ b/build.gradle
@@ -245,6 +245,15 @@ project(':wres-system')
         // super-duper mocking help (mocking static, private methods)
         testCompile 'org.powermock:powermock-api-mockito2:2.0.2'
         testCompile 'org.powermock:powermock-module-junit4:2.0.2'
+
+        // Use mockserver to test certificate utilities
+        testCompile 'org.mock-server:mockserver-netty:5.6.1'
+    }
+
+    test
+    {
+        // Set the socket timeout for tests involving mockserver to 120s
+        systemProperties = [ "mockserver.maxSocketTimeout": 120000 ]
     }
 }
 
@@ -332,7 +341,7 @@ project(':wres-io')
         testCompile 'org.powermock:powermock-module-junit4:2.0.2'
 
         // Use mockserver as a mock server for mock API responses
-        testCompile 'org.mock-server:mockserver-netty:5.6.0'
+        testCompile 'org.mock-server:mockserver-netty:5.6.1'
 
         // Use H2 for truly embedded SQL db
         testCompile 'com.h2database:h2:1.4.199'
