--- a/docker-compose-workers-only.yml
+++ b/docker-compose-workers-only.yml
@@ -8,10 +8,11 @@ services:
          - /mnt/wres_secrets:/wres_secrets:ro
         network_mode: "host"
         environment:
-         - JAVA_OPTS=-Dwres.broker=***REMOVED***wres-broker${WRES_ENV_SUFFIX} -Djava.io.tmpdir=/mnt/wres_share/evaluations
+         - JAVA_OPTS=-Dwres.broker=***REMOVED***wres-broker${WRES_ENV_SUFFIX} -Djava.io.tmpdir=/mnt/wres_share/evaluations -XX:HeapDumpPath=/mnt/wres_share
          - PGPASSFILE=/wres_secrets/.pgpass
          # Do not auto-liquibase-migrate on each evaluation. This requires an
          # administrator to run the migration(s) during or after deployment.
-         - INNER_JAVA_OPTS=-Dwres.attemptToMigrate=false
+	 # Write heap dumps to the root of the volume above.
+         - INNER_JAVA_OPTS=-Dwres.attemptToMigrate=false -XX:HeapDumpPath=/mnt/wres_share
         # Worker JVM should have 32m max heap, WRES should have 2310m max heap
         mem_limit: 2730m
