--- a/build.gradle
+++ b/build.gradle
@@ -47,6 +47,9 @@ plugins
     // remote developers can see detailed test feedback without launching a
     // browser. See #61601
     id 'com.github.ksoichiro.console.reporter' version '0.6.2'
+
+    // To discover library versions with known vulnerabilities
+    id 'org.owasp.dependencycheck' version '5.2.1'
 }
 
 repositories
@@ -63,6 +66,7 @@ subprojects
 {
     apply plugin: 'java'
     apply plugin: 'jacoco'
+    apply plugin: 'org.owasp.dependencycheck'
 
     sourceCompatibility = '11'
     targetCompatibility = '11'
@@ -301,7 +305,7 @@ project(':wres-io')
 
         compile group: 'org.liquibase', name: 'liquibase-core', version: '3.7.0'
 
-        compile( group: 'com.amazonaws', name: 'aws-java-sdk-s3', version: '1.11.599')
+        compile( group: 'com.amazonaws', name: 'aws-java-sdk-s3', version: '1.11.613')
         {
             // Because we use slf4j, not jcl:
             exclude group: 'commons-logging', module: 'commons-logging'
@@ -642,21 +646,21 @@ project(':wres-tasker')
         compile 'jakarta.xml.bind:jakarta.xml.bind-api:2.3.2'
 
         // Server library to run a web server:
-        compile 'org.eclipse.jetty:jetty-server:9.4.19.v20190610'
+        compile 'org.eclipse.jetty:jetty-server:9.4.20.v20190813'
 
         // Servlet container library to run a web application with:
-        compile 'org.eclipse.jetty:jetty-webapp:9.4.19.v20190610'
+        compile 'org.eclipse.jetty:jetty-webapp:9.4.20.v20190813'
 
         // Needed at compile-time to reference ServletContainer.class and
         // DefaultServlet.class
         compile 'org.glassfish.jersey.containers:jersey-container-servlet-core:2.29'
         // Update the jetty-continuation depended upon by above jersey dep
-        compile 'org.eclipse.jetty:jetty-continuation:9.4.19.v20190610'
+        compile 'org.eclipse.jetty:jetty-continuation:9.4.20.v20190813'
 
         compile 'com.github.ben-manes.caffeine:caffeine:2.7.0'
 
         // To accurately detect mime types of files.
-        compile 'org.apache.tika:tika-core:1.21'
+        compile 'org.apache.tika:tika-core:1.22'
 
         runtime 'ch.qos.logback:logback-classic:1.3.0-alpha4'
         runtime 'org.glassfish.jersey.core:jersey-server:2.29'
@@ -839,6 +843,8 @@ if (!gitIsClean)
 
 apply plugin: 'nebula-aggregate-javadocs'
 
+apply plugin: 'org.owasp.dependencycheck'
+
 dependencies
 {
     compile project(':wres-util')
@@ -853,11 +859,11 @@ dependencies
 
     compile 'javax.ws.rs:javax.ws.rs-api:2.1.1'
     compile 'javax.annotation:javax.annotation-api:1.3.2'
-    compile 'org.eclipse.jetty:jetty-server:9.4.19.v20190610'
-    compile 'org.eclipse.jetty:jetty-webapp:9.4.19.v20190610'
+    compile 'org.eclipse.jetty:jetty-server:9.4.20.v20190813'
+    compile 'org.eclipse.jetty:jetty-webapp:9.4.20.v20190813'
     compile 'org.glassfish.jersey.containers:jersey-container-servlet-core:2.29'
     // Update the jetty-continuation that above jersey dep depends on
-    compile 'org.eclipse.jetty:jetty-continuation:9.4.19.v20190610'
+    compile 'org.eclipse.jetty:jetty-continuation:9.4.20.v20190813'
 
     compile 'com.github.ben-manes.caffeine:caffeine:2.7.0'
 
