--- a/wres-tasker/Dockerfile
+++ b/wres-tasker/Dockerfile
@@ -17,6 +17,12 @@ RUN yum install -y \
     libmount-2.23.2-61.el7_7.1 \
     libsmartcols-2.23.2-61.el7_7.1 \
     libuuid-2.23.2-61.el7_7.1 \
+    nss-3.44.0-7.el7_7 \
+    nss-softokn--3.44.0-8.el7_7 \
+    nss-softokn-freebl-3.44.0-8.el7_7 7 \
+    nss-sysinit-3.44.0-7.el7_7 \
+    nss-tools-3.44.0-7.el7_7 \
+    nss-util-3.44.0-4.el7_7 \
     procps-ng-3.3.10-26.el7_7.1 \
     systemd-219-67.el7_7.2 \
     systemd-libs-219-67.el7_7.2 \
