Let wres.TimeSeries not assume wres.TimeSeriesSource
Also let wres.TimeSeries from scratch work with H2 and Postgres by
promoting the liquibase script from wres-io test with minor cleanup.

Also improve portability by using varchar rather than enum on the
scale_function column of wres.TimeSeries and by avoiding deferrable
constraints. Not setting deferrable may be OK for now, but in future
if there are multi-row inserts or copies to wres.TimeSeries table
it may improve performance to create postgresql- and sqlite-specific
changeset with deferrable/initiallyDeferred set to true and keep a
separate changeset for the rest of the database systems.

The tests in wres-io also now have the production (dist/lib/conf)
liquibase scripts on the test-time classpaths (in addition to the
ones specified for the tests). Care must be taken to avoid liquibase
change file name collisions.

Also make the previous LSNO2 and HDGA4 changes more cooperative and
flexible.

Refs #65216
Refs #71076
Refs #72786
Refs #60801

--- a/build.gradle
+++ b/build.gradle
@@ -357,6 +357,33 @@ project(':wres-io')
         systemProperties = [ "mockserver.maxSocketTimeout": 120000,
                              "ucar.unidata.io.http.maxHttpBufferSize": 200000 ]
     }
+
+
+    // The liquibase changesets are in the root project(!?), give wres-io access
+    // to those changesets on the test time classpath.
+    sourceSets
+    {
+        test
+        {
+            resources
+            {
+                // Flatten the contents of both testNonsrc (that every
+                // subproject aka module has) and root's dist/lib/conf
+                // (including database dir) onto the classpath.
+                // The reason to do this is that newer liquibase scripts can
+                // start their existence at test-time, but both those new and
+                // existing in production are accessible at test time.
+                // The reason for awkward phrasing here is that we want the
+                // classpath path to be exactly 'database/[changeset].xml', not
+                // flattened out to '[changeset].xml'.
+                srcDirs += '../dist/lib/conf'
+
+                // Avoid inclusion of wresconfig.xml because the db settings
+                // from that config would be (unsuccessfully) used at test time.
+                excludes += 'wresconfig.xml'
+            }
+        }
+    }
 }
 
 project(':wres-metrics')
@@ -910,7 +937,6 @@ sourceSets
         {
             srcDirs = ['testNonsrc']
         }
-   
     }
 }
 
